fixed the layer issue in header and footer overlaping

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -33,6 +33,8 @@
 }
 
 .footer__container {
+  position: relative;
+  z-index: 0;
   display: flex;
   position: relative;
   justify-content: space-between;
@@ -94,5 +96,7 @@ h2.end__text {
   }
   .aboutUs__card {
     width: 100%;
+  }
+  .info__card {
   }
 }
