--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,5 +1,6 @@
 .active_nav {
   position: fixed;
+  z-index: 100;
   top: 0;
   left: 0;
   right: 0;
@@ -9,7 +10,6 @@
 }
 .header {
   display: flex;
-
   padding: 10px 30px;
   margin: auto;
   justify-content: space-between;
@@ -151,7 +151,7 @@ input[type="checkbox"]:checked ~ span:nth-of-type(3) {
   flex-direction: column;
   transform: translateX(100%);
   transition: transform 0.2s;
-  z-index: 10;
+  z-index: 100;
 }
 .mobile__class ul {
   flex-direction: column;
